# AI-Personal-Knowledge

./: .gitignore  CONTRIBUTING.md  Prompt.md  README.md  docker-compose.yml  package-lock.json  tasks.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  desktop-build.yml  tauri-release.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  run_sidecar.py  sidecar.spec
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase4_baseline.py
backend/app/: cli.py  config.py  database.py  db_init.py  job_queue.py  main.py  runtime.py
backend/app/llm/: __init__.py  prompts.py  router.py  types.py
backend/app/llm/providers/: __init__.py  anthropic.py  base.py  custom.py  google.py  ollama.py  openai_compatible.py
backend/app/models/: __init__.py  attachment.py  chat.py  collection.py  connection.py  insight.py  note.py  note_version.py  task.py  template.py  user.py  user_activity.py
backend/app/routers/: ask.py  attachments.py  auth.py  benchmark.py  chat.py  collections.py  connections.py  export.py  flashcards.py  garden.py  graph.py  import_.py  inbox.py  ingest.py  insights.py  interop.py  momentum.py  note_versions.py  notes.py  plugins.py  review.py  search.py  synthesis_personalization.py  system.py  tasks.py  templates.py  voice.py  webhooks.py
backend/app/schemas/: attachment.py  chat.py  collection.py  connection.py  insight.py  note.py  note_version.py  search.py  task.py  template.py
backend/app/services/: connection_engine.py  embedding_service.py  graph_service.py  rag_service.py  search_service.py
backend/app/tasks/: insight_engine.py
backend/app/utils/: auth.py  rate_limit.py  security.py
backend/tests/: conftest.py  test_api.py  test_database_config.py  test_notes.py  test_services.py
clipper-extension/: background.js  content.js  manifest.json  popup.html  popup.js
docs-site/: package-lock.json  package.json
docs-site/docs/: index.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  (+2 more)
scripts/: build_sidecar.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
(+50 files in other folders)
