[project]
name = "second-brain-backend"
version = "0.1.0"
description = "AI-Powered Personal Knowledge System (Second Brain)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.0",
    "sqlalchemy==2.0.30",
    "chromadb==0.5.0",
    "networkx==3.3",
    "pydantic-settings==2.3.0",
    "httpx==0.27.0",
    "beautifulsoup4==4.12.0",
    "youtube-transcript-api==0.6.0",
    "yt-dlp==2024.12.13",
    "python-multipart==0.0.9",
    "numpy<2.0.0",
]

[project.optional-dependencies]
desktop = [
    "pyinstaller==6.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
